AP-9082: enabled "Ctrl-+" as zoom-in keyboard action
... this used to only work for systems with German locale and now it is
enabled always

AP-9082 (Keyboard actions to zoom in/out in workflow editor)

--- a/org.knime.workbench.editor/plugin.xml
+++ b/org.knime.workbench.editor/plugin.xml
@@ -526,6 +526,11 @@
             commandId="knime.actions.zoom_reset"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+0"/>
+            <!-- copied from org.eclipse.gef/plugin.xml without locale=de -->
+      <key  
+            commandId="org.eclipse.gef.zoom_in"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1++"/>
       <key
             commandId="knime.commands.openView"
             contextId="org.eclipse.ui.contexts.window"
