SRV-1502: File system browser extension point definition and classes added
In order to be able to inject different file system browsers into node's
file chooser panels.

SRV-1502 (Enable reader/writer dialogs to browse server repository)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -14,6 +14,7 @@
    <extension-point id="JavaToDataCellConverter" name="JavaToDataCellConverter" schema="schema/JavaToDataCellConverter.exsd"/>
    <extension-point id="DataCellToJavaConverter" name="DataCellToJavaConverter" schema="schema/DataCellToJavaConverter.exsd"/>
    <extension-point id="WorkflowSaveHook" name="Extensions that are run after a workflow is saved to disc" schema="schema/WorkflowSaveHook.exsd"/>
+   <extension-point id="FileSystemBrowser" name="FileSystemBrowser" schema="schema/FileSystemBrowser.exsd"/>
    <extension
          point="org.knime.core.NodeExecutionJobManagerFactory">
       <NodeExecutionJobManagerFactory
