--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>org.knime.core.data.uritype</module>
 		<module>org.knime.core.pmml</module>
 		<module>org.knime.core.ui</module>
+		<module>org.knime.rsyntaxtextarea</module>
 		<module>org.knime.update.core</module>
 	</modules>
 
