--- a/org.knime.features.testing.core/.project
+++ b/org.knime.features.testing.core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.knime.features.testingapplication</name>
+	<name>org.knime.features.testing.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
