AP-12286: Top level configurations and more stored in artifact files with workflow
I.e. configurations of dialog nodes, workfow variables and workflow
credentials are stored in individual artifact files.

Respective methods to get and set the top level node configurations (of
DialogNodes) in the workflow manager (reusing and abstracting code for
Input/OutputNodes, e.g. for parameter name collisions).

AP-12286 (Save JSON representation of workflow configuration)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -622,5 +622,8 @@
       <WorkflowSaveHook
             class="org.knime.core.openapi.OpenAPIDefinitionGenerator">
       </WorkflowSaveHook>
+      <WorkflowSaveHook
+            class="org.knime.core.openapi.ConfigDefinitionGenerator">
+      </WorkflowSaveHook>
    </extension>
 </plugin>
