AP-12286: Artifacts generating class renamed and moved
... into a package that is not exported (because it's not API).
Required to make a method public in OpenAPIDefinitionGenerator.

AP-12286 (Save JSON representation of workflow configuration)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -623,7 +623,7 @@
             class="org.knime.core.openapi.OpenAPIDefinitionGenerator">
       </WorkflowSaveHook>
       <WorkflowSaveHook
-            class="org.knime.core.openapi.ConfigDefinitionGenerator">
+            class="org.knime.core.node.workflow.artifacts.WorkflowConfigArtifactsGenerator">
       </WorkflowSaveHook>
    </extension>
 </plugin>
