--- a/org.knime.core.pmml/build.properties
+++ b/org.knime.core.pmml/build.properties
@@ -4,3 +4,4 @@ bin.includes = META-INF/,\
 source.knime-pmml.jar = src/eclipse/
 output.knime-pmml.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
+src.includes = src/xmlbeans
