Enabled CI friendly versions

--- a/org.knime.core.pmml/pom.xml
+++ b/org.knime.core.pmml/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.knime</groupId>
 		<artifactId>knime-core</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>${revision}${changelist}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
