--- a/org.knime.update.core/pom.xml
+++ b/org.knime.update.core/pom.xml
@@ -8,22 +8,10 @@
 	<parent>
 		<groupId>org.knime</groupId>
 		<artifactId>knime-core</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>${revision}${changelist}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>org.knime.update.core</artifactId>
 	<packaging>eclipse-repository</packaging>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-repository-plugin</artifactId>
-				<configuration>
-					<finalName>org.knime.update.core_${qualifiedVersion}</finalName>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
