--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,12 @@
 
 	<groupId>org.knime</groupId>
 	<artifactId>knime-core</artifactId>
-	<version>4.1.0-SNAPSHOT</version>
+	<version>${revision}${changelist}</version>
 	<packaging>pom</packaging>
 
 	<properties>
+		<revision>4.1.0</revision>
+		<changelist>-SNAPSHOT</changelist>
 		<feature-branch-extension.branchListProperty>git.branch</feature-branch-extension.branchListProperty>
 		<feature-branch-extension.appendArtifactoryProperties>false</feature-branch-extension.appendArtifactoryProperties>
 	</properties>
