AP-12893: name of port type: "Flowvariable" -> "Flow Variable"
AP-12893: Flow Variable should be spelled correctly in the node port type

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -584,7 +584,7 @@
       </portType>
       <portType
             color="#ff4b4b"
-            name="Flowvariable"
+            name="Flow Variable"
             objectClass="org.knime.core.node.port.flowvariable.FlowVariablePortObject"
             objectSerializer="org.knime.core.node.port.flowvariable.FlowVariablePortObject$Serializer"
             specClass="org.knime.core.node.port.flowvariable.FlowVariablePortObjectSpec"
