AP-10940: Add type mapping annotations for string based types
- URI
- DateAndTime
- Boolean
- BitVector
- PMML
- XML

AP-10940 (Implement type mapping for classes that implement the
    FromString, FromStream and FromReader interface but do not use
    AdapterCell)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -376,7 +376,8 @@
       </DataType>
      
       <DataType
-            cellClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell">
+            cellClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell"
+            factoryClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell$Factory">
          <serializer
                cellClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell"
                serializerClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell$SparseBitVectorSerializer">
