--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 
 	<parent>
 		<groupId>org.knime.maven</groupId>
-		<artifactId>parent-pom</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<artifactId>ap.parent</artifactId>
+		<version>1.0.0</version>
 	</parent>
 
 	<groupId>org.knime</groupId>
