--- a/org.knime.core/pom.xml
+++ b/org.knime.core/pom.xml
@@ -14,6 +14,10 @@
 	<artifactId>org.knime.core</artifactId>
 	<packaging>${packaging.default}</packaging>
 
+	<properties>
+		<revision>4.1.1</revision>
+	</properties>
+
     <build>
         <plugins>
             <plugin>
