AP-13333: Workflow port object moved to knime.core
AP-13333 (Add Container I/O nodes prior writing workflow)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -616,6 +616,15 @@
             specClass="org.knime.core.node.port.pmml.PMMLPortObjectSpec"
             specSerializer="org.knime.core.node.port.pmml.PMMLPortObjectSpecSerializer">
       </portType>
+      <portType
+            color="#000000"
+            hidden="false"
+            name="Workflow Port Object"
+            objectClass="org.knime.core.node.workflow.capture.WorkflowPortObject"
+            objectSerializer="org.knime.core.node.workflow.capture.WorkflowPortObject$Serializer"
+            specClass="org.knime.core.node.workflow.capture.WorkflowPortObjectSpec"
+            specSerializer="org.knime.core.node.workflow.capture.WorkflowPortObjectSpec$Serializer">
+      </portType>
    </extension>
    <extension
          point="org.knime.core.TableFormat">
