AP-13359: disabled buddy class loading of org.knime.core
NodeFactory contributions and NodeSetContributions are now collected in
the core. The collected nodes are then used by the workbench (and
gateway API).

AP-13359 (Deactivate buddy class loading)

--- a/org.knime.testing/plugin.xml
+++ b/org.knime.testing/plugin.xml
@@ -25,6 +25,12 @@
       </node>
       <node
             category-path="/testing"
+            factory-class="org.knime.testing.node.differNode.DiffNodeFactory"
+            deprecated="true"
+            >
+      </node>
+      <node
+            category-path="/testing"
             factory-class="org.knime.testing.node.executioncount.ExecutionCountNodeFactory"
             >
       </node>
