AP-13745: Add extension point for flow variable types
AP-13745 (Add Extension Point for FlowVariable types)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -16,6 +16,7 @@
    <extension-point id="WorkflowSaveHook" name="Extensions that are run after a workflow is saved to disc" schema="schema/WorkflowSaveHook.exsd"/>
    <extension-point id="FileSystemBrowser" name="FileSystemBrowser" schema="schema/FileSystemBrowser.exsd"/>
    <extension-point id="DataColumnMetaDataType" name="DataColumnMetaDataType" schema="schema/DataColumnMetaDataType.exsd"/>
+   <extension-point id="FlowVariableType" name="FlowVariableType" schema="schema/FlowVariableType.exsd"/>
    <extension
          point="org.knime.core.NodeExecutionJobManagerFactory">
       <NodeExecutionJobManagerFactory
