AP-6180: Hidden flag added to node(set) extension
* on entire node set factories
* for individual node factories
* virtual inputs and outputs (component, parallel chunk) registered via
node set factory and set to 'hidden'

AP-6180 (New 'deprecation' level for node registration: deprecated usage (vs. deprecated functionality))

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -665,4 +665,11 @@
             dataColumnMetaDataExtension="org.knime.core.data.probability.nominal.NominalDistributionValueMetaDataExtension">
       </DataColumnMetaData>
    </extension>
+   <extension
+         point="org.knime.workbench.repository.nodesets">
+      <nodeset
+            deprecated="false"
+            factory-class="org.knime.core.node.workflow.virtual.VirtualNodeSetFactory">
+      </nodeset>
+   </extension>
 </plugin>
