AP-13359: Reference Reader nodes registered
.. as hidden nodes.

AP-13359 (Deactivate buddy class loading in org.knime.core)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -672,4 +672,17 @@
             factory-class="org.knime.core.node.workflow.virtual.VirtualNodeSetFactory">
       </nodeset>
    </extension>
+   <extension
+         point="org.knime.workbench.repository.nodes">
+      <node
+            deprecated="false"
+            factory-class="org.knime.core.node.exec.dataexchange.in.BDTInNodeFactory"
+            hidden="true">
+      </node>
+      <node
+            deprecated="false"
+            factory-class="org.knime.core.node.exec.dataexchange.in.PortObjectInNodeFactory"
+            hidden="true">
+      </node>
+   </extension>
 </plugin>
