--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -17,7 +17,7 @@
    <extension-point id="FileSystemBrowser" name="FileSystemBrowser" schema="schema/FileSystemBrowser.exsd"/>
    <extension-point id="DataColumnMetaDataType" name="DataColumnMetaDataType" schema="schema/DataColumnMetaDataType.exsd"/>
    <extension-point id="FlowVariableType" name="FlowVariableType" schema="schema/FlowVariableType.exsd"/>
-   <extension-point id="ImageContentFactory" name="Contributes custom image content to an image port object." schema="schema/ImageContentFactory.exsd"/>
+   <extension-point id="ImageContentFactory" name="Contributes custom image content to an image port object (NO public API)" schema="schema/ImageContentFactory.exsd"/>
    <extension
          point="org.knime.core.NodeExecutionJobManagerFactory">
       <NodeExecutionJobManagerFactory
