--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -11,6 +11,7 @@
    <extension-point id="PortType" name="PortType" schema="schema/PortType.exsd"/>
    <extension-point id="EarlyStartup" name="EarlyStartup" schema="schema/EarlyStartup.exsd"/>
    <extension-point id="TableFormat" name="TableFormat" schema="schema/TableFormat.exsd"/>
+   <extension-point id="ExtensionTable" name="ExtensionTable" schema="schema/ExtensionTable.exsd"/>
    <extension-point id="JavaToDataCellConverter" name="JavaToDataCellConverter" schema="schema/JavaToDataCellConverter.exsd"/>
    <extension-point id="DataCellToJavaConverter" name="DataCellToJavaConverter" schema="schema/DataCellToJavaConverter.exsd"/>
    <extension-point id="WorkflowSaveHook" name="Extensions that are run after a workflow is saved to disc" schema="schema/WorkflowSaveHook.exsd"/>
