DEVOPS-237: add dependency on org.knime.features.javasnippet
DEVOPS-237 (Enable testing for knime-core in the new build system)

--- a/org.knime.core.workflow.tests/pom.xml
+++ b/org.knime.core.workflow.tests/pom.xml
@@ -46,6 +46,11 @@
 							</requirement>
 							<requirement>
 								<type>eclipse-feature</type>
+								<id>org.knime.features.javasnippet</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
 								<id>org.knime.features.workbench</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
