2. added sonarlint (org.sonarlint.eclipse.core.prefs)

--- a/org.knime.core.pmml/.settings/org.sonarlint.eclipse.core.prefs
+++ b/org.knime.core.pmml/.settings/org.sonarlint.eclipse.core.prefs
@@ -3,4 +3,4 @@ eclipse.preferences.version=1
 idePrefixKey=
 projectKey=org.knime\:knime-core
 serverId=sonar.knime.com
-sqPrefixKey=
+sqPrefixKey=org.knime.core.pmml
