AP-14430: added 3 fragments to include w3c.dom.events
* xerces.clfix
* javax.xml.clfix
* org.eclipse.e4.ui.css.core.clfix

AP-14430: Batik Version Update to 1.13.0

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 				<configuration>
 					<excludes>
 						<plugin id="org.eclipse.ant.optional.junit" />
+						<plugin id="org.apache.xerces.clfix" />
 					</excludes>
 				</configuration>
 			</plugin>
