--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 				<module>org.knime.core.ui</module>
 				<module>org.knime.rsyntaxtextarea</module>
 				<module>org.knime.testing</module>
+				<module>org.knime.features.core</module>
 				<module>org.knime.features.testing.core</module>
 				<module>org.knime.core.workflow.tests</module>
 			</modules>
