--- a/org.knime.core.pmml/pom.xml
+++ b/org.knime.core.pmml/pom.xml
@@ -44,6 +44,10 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-dependency-tools-plugin</artifactId>
+            </plugin>			
         </plugins>
     </build>
 </project>
