--- a/org.knime.core.workflow.tests/pom.xml
+++ b/org.knime.core.workflow.tests/pom.xml
@@ -13,6 +13,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 
 	<properties>
+		<revision>4.2.0</revision>
 		<surefireArgLine>-Dsun.java2d.d3d=false -Dosgi.classloader.lock=classname \
 		-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -XX:+UseG1GC \
 		-Dsun.net.client.defaultReadTimeout=0 -Xmx4G \
