Added revision property to add pom files
This will make it easier to bump individual project versions
in the future because the version is not derived from the
parent pom (repository pom) any more.

--- a/org.knime.core.data.uritype/pom.xml
+++ b/org.knime.core.data.uritype/pom.xml
@@ -13,6 +13,10 @@
 	<groupId>org.knime</groupId>
 	<artifactId>org.knime.core.data.uritype</artifactId>
 	<packaging>${packaging.default}</packaging>
+	
+	<properties>
+		<revision>4.3.0</revision>
+	</properties>
 
     <build>
         <plugins>
