--- a/org.knime.core.tests/pom.xml
+++ b/org.knime.core.tests/pom.xml
@@ -11,6 +11,10 @@
 	</parent>
 	<artifactId>org.knime.core.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
+	
+	<properties>
+		<revision>4.3.0</revision>
+	</properties>
 
 	<build>
 		<plugins>
