--- a/org.knime.update.core/pom.xml
+++ b/org.knime.update.core/pom.xml
@@ -14,4 +14,8 @@
 
 	<artifactId>org.knime.update.core</artifactId>
 	<packaging>eclipse-repository</packaging>
+	
+	<properties>
+		<revision>4.3.0</revision>
+	</properties>
 </project>
