--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -12,7 +12,7 @@
    <extension-point id="EarlyStartup" name="EarlyStartup" schema="schema/EarlyStartup.exsd"/>
    <extension-point id="TableFormat" name="TableFormat" schema="schema/TableFormat.exsd"/>
    <extension-point id="ExtensionTable" name="ExtensionTable" schema="schema/ExtensionTable.exsd"/>
-   <extension-point id="DataContainerDelegate" name="DataContainerDelegate" schema="schema/DataContainerDelegate.exsd"/>
+   <extension-point id="TableBackend" name="TableBackend" schema="schema/TableBackend.exsd"/>
    <extension-point id="JavaToDataCellConverter" name="JavaToDataCellConverter" schema="schema/JavaToDataCellConverter.exsd"/>
    <extension-point id="DataCellToJavaConverter" name="DataCellToJavaConverter" schema="schema/DataCellToJavaConverter.exsd"/>
    <extension-point id="WorkflowSaveHook" name="Extensions that are run after a workflow is saved to disc" schema="schema/WorkflowSaveHook.exsd"/>
@@ -710,9 +710,9 @@
       </node>
    </extension>
    <extension
-         point="org.knime.core.DataContainerDelegate">
-      <DataContainerDelegate
-            factoryClass="org.knime.core.data.container.BufferedDataContainerDelegateFactory">
-      </DataContainerDelegate>
+         point="org.knime.core.TableBackend">
+      <TableBackend
+            backend="org.knime.core.data.container.BufferedTableBackend">
+      </TableBackend>
    </extension>
 </plugin>
