--- a/org.knime.core.data.uritype/build.properties
+++ b/org.knime.core.data.uritype/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                README.TXT,\
                plugin.xml
+src.includes = LICENSE.txt
