--- a/org.knime.core.tests/build.properties
+++ b/org.knime.core.tests/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                fragment.xml,\
-               files/
+               files/,\
+               LICENSE.TXT
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+src.includes = LICENSE.TXT
