--- a/org.knime.rsyntaxtextarea/build.properties
+++ b/org.knime.rsyntaxtextarea/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
 jars.compile.order = knime-rsyntaxtextarea.jar
 output.knime-rsyntaxtextarea.jar = bin/
 source.knime-rsyntaxtextarea.jar = src/
+src.includes = LICENSE.txt
