--- a/org.knime.testing/build.properties
+++ b/org.knime.testing/build.properties
@@ -8,7 +8,8 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                schema/,\
                doc/Noding Guidelines.pdf
-src.includes = doc/Regression Tests.docx
+src.includes = doc/Regression Tests.docx,\
+               LICENSE.txt
 jars.compile.order = knime-testing.jar
 source.knime-testing.jar = src/,\
                            src-deprecated/
