--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 				<module>org.knime.core.pmml</module>
 				<module>org.knime.core</module>
 				<module>org.knime.core.ui</module>
+				<module>org.knime.core.rpc</module>
 				<module>org.knime.slf4j.binding</module>
 				<module>org.knime.testing</module>
 				<module>org.knime.rsyntaxtextarea</module>
@@ -48,6 +49,8 @@
 				<module>org.knime.core</module>
 				<module>org.knime.core.tests</module>
 				<module>org.knime.core.ui</module>
+				<module>org.knime.core.rpc</module>
+				<module>org.knime.core.rpc.tests</module>
 				<module>org.knime.rsyntaxtextarea</module>
 				<module>org.knime.testing</module>
 				<module>org.knime.features.core</module>
