DEVOPS-507: Added changelogs to binary builds
DEVOPS-507 (Add changelog to every plug-in during build)
https://knime-com.atlassian.net/browse/DEVOPS-507

--- a/org.knime.core.data.uritype/build.properties
+++ b/org.knime.core.data.uritype/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                LICENSE.txt,\
                README.TXT,\
-               plugin.xml
+               plugin.xml,\
+			   CHANGELOG.md
 src.includes = LICENSE.txt
