--- a/org.knime.core.pmml/build.properties
+++ b/org.knime.core.pmml/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                lib/schemas.jar,\
                knime-pmml.jar,\
-               LICENSE.TXT
+               LICENSE.TXT,\
+			   CHANGELOG.md
 source.knime-pmml.jar = src/eclipse/
 output.knime-pmml.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
