--- a/org.knime.core.tests/build.properties
+++ b/org.knime.core.tests/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                fragment.xml,\
                files/,\
-               LICENSE.TXT
+               LICENSE.TXT,\
+			   CHANGELOG.md
 jars.compile.order = .
 source.. = src/
 output.. = bin/
