--- a/org.knime.rsyntaxtextarea/build.properties
+++ b/org.knime.rsyntaxtextarea/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                knime-rsyntaxtextarea.jar,\
                LICENSE.txt,\
-               README.TXT
+               README.TXT,\
+			   CHANGELOG.md
 jars.compile.order = knime-rsyntaxtextarea.jar
 output.knime-rsyntaxtextarea.jar = bin/
 source.knime-rsyntaxtextarea.jar = src/
