--- a/org.knime.slf4j.binding.tests/build.properties
+++ b/org.knime.slf4j.binding.tests/build.properties
@@ -1,5 +1,6 @@
 bin.includes = META-INF/,\
-               LICENSE.TXT
+               LICENSE.TXT,\
+			   CHANGELOG.md
 jars.compile.order = .
 source.. = src/
 output.. = bin/
