--- a/org.knime.slf4j.binding/build.properties
+++ b/org.knime.slf4j.binding/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                .,\
-               LICENSE.TXT
+               LICENSE.TXT,\
+			   CHANGELOG.md
 jars.compile.order = .
 source.. = src/main/java/,\
            src/main/resources/
