--- a/org.knime.testing/build.properties
+++ b/org.knime.testing/build.properties
@@ -7,7 +7,8 @@ bin.includes = META-INF/,\
                knime-testing.jar,\
                LICENSE.txt,\
                schema/,\
-               doc/Noding Guidelines.pdf
+               doc/Noding Guidelines.pdf,\
+			   CHANGELOG.md
 src.includes = doc/Regression Tests.docx,\
                LICENSE.txt
 jars.compile.order = knime-testing.jar
