--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                LICENSE.txt,\
                plugin.xml,\
-               .
+               .,\
+			   CHANGELOG.md
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
