AP-12595: added "Color" port object to meta node setup dialog
AP-12595: Metanode reconfiguration does not allow addition of Network port type

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -577,7 +577,7 @@
             specSerializer="org.knime.core.node.port.pmml.preproc.PMMLPreprocPortObjectSpec$Serializer">
       </portType>
       <portType
-            hidden="true"
+            hidden="false"
             color="#1eb9dc"
             name="Color"
             objectClass="org.knime.core.node.port.viewproperty.ColorHandlerPortObject"
