AP-15890: added locking to #configure and #save in 'block node'
AP-15890: Clean-up + test case for AP-10548 (WorkflowManager can only load one workflow at a time)

--- a/org.knime.testing/plugin.xml
+++ b/org.knime.testing/plugin.xml
@@ -25,6 +25,11 @@
       </node>
       <node
             category-path="/testing"
+            factory-class="org.knime.testing.node.blocking.BlockingVariableNodeFactory"
+            >
+      </node>
+      <node
+            category-path="/testing"
             factory-class="org.knime.testing.node.differNode.DiffNodeFactory"
             deprecated="true"
             >
