AP-15885: removed (faulty) error message
AP-15885: REST nodes (Get, Post, ...) cause unexpected warning message when loading flows in v4.3.0

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 					<url>${knime.xml.p2}</url>
 				</repository>
 				<repository>
+					<id>p2-knime-rest</id>
+					<layout>p2</layout>
+					<url>${knime.rest.p2}</url>
+				</repository>
+				<repository>
 					<id>p2-knime-python</id>
 					<layout>p2</layout>
 					<url>${knime.python.p2}</url>
