--- a/org.knime.core.pmml/build.properties
+++ b/org.knime.core.pmml/build.properties
@@ -6,5 +6,5 @@ bin.includes = META-INF/,\
 source.knime-pmml.jar = src/eclipse/
 output.knime-pmml.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
-src.includes = src/xmlbeans,\
+src.includes = src/xmlbeans/,\
                LICENSE.TXT
