--- a/org.knime.core/.classpath
+++ b/org.knime.core/.classpath
@@ -2,9 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src/eclipse"/>
 	<classpathentry kind="src" output="bin/xmlbeans" path="src/xmlbeans"/>
-	<classpathentry exported="true" kind="lib" path="lib/schemas.jar"/>
-	<classpathentry kind="lib" path="lib/saxon-he-9.2.0.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="lib/saxon-he-9.2.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/schemas.jar"/>
 	<classpathentry kind="output" path="bin/eclipse"/>
 </classpath>
