AP-15900: Move Accesses from core.data.v2 to core.table
AP-15900 (Revise RowCursor)

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
 			<url>${knime.shared.p2}</url>
 		</repository>
 		<repository>
+			<id>p2-knime-table</id>
+			<layout>p2</layout>
+			<url>${knime.p2.repo}/knime-core-table/${git.branch}</url>
+		</repository>
+		<repository>
 			<id>p2-knime-tp</id>
 			<layout>p2</layout>
 			<url>${knime.tp.p2}</url>
