--- a/org.knime.core.pmml/build.xml
+++ b/org.knime.core.pmml/build.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="XMLBeans" default="build">
 	<target name="init">
-		<eclipse.convertPath resourcePath="org.apache.xmlbeans/lib/xbean.jar" property="xbean.jar" />
-		<taskdef name="xmlbean" classname="org.apache.xmlbeans.impl.tool.XMLBean" classpath="${xbean.jar}" />
+		<taskdef name="xmlbean" classname="org.apache.xmlbeans.impl.tool.XMLBean" classpath="${compile_classpath}" />
 	</target>
 
 	<!-- ========================== build ==== -->
@@ -25,14 +24,12 @@
 
 	<target name="build" depends="schemas.check,init" unless="schemas.notRequired">
 		<antcall target="clean" />
-		<xmlbean destfile="lib/schemas.jar" srcgendir="src/xmlbeans" javasource="1.5" optimize="on" debug="on" classpath="${xbean.jar}">
+		<xmlbean destfile="lib/schemas.jar" srcgendir="src/xmlbeans" partialMethods="ALL" optimize="on" debug="on" classpath="${compile_classpath}">
 			<fileset dir="src">
 				<include name="**/pmml-4-2.xsd"/>
 				<include name="**/*.xsdconfig" />
 			</fileset>
 		</xmlbean>
-		<eclipse.convertPath fileSystemPath="${basedir}" property="projectName" />
-		<eclipse.refreshLocal resource="${projectName}" depth="infinite" />
 	</target>
 
 	<target name="clean" depends="checkOS,clean-jar">
